testsuite/tests/grammar/invalid_lexers/case_6.lkt
import common

lexer foo_example {
    foo
    match p"foo" {
        if previous_token is foo then send(foo, 3)
        else send(foo, foo)
    }
}
